feat: Initialize PageVitals API client
- Add Python scripts for fetching website data and Lighthouse scores
- Implement secure .env configuration with API key management
- Add requirements.txt with core dependencies
- Create basic project documentation
- Include security measures for API key handling

The client supports:
- Fetching and storing website configurations
- Retrieving Lighthouse performance metrics
- Exporting data to CSV format

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PAGEVITALS_API_KEY=your_api_key_here
-PAGEVITALS_WEBSITE_DISPLAYNAME=website_id_here
+PAGEVITALS_WEBSITE_DISPLAYNAME=website_id_here #these are automatically added with get-websites.py
