--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-PAGEVITALS_API_KEY=your_api_key_here #Best to use "viewer" API settings to prevent destructive changes
+PAGEVITALS_API_KEY=your_api_key_here #Recommended to use "viewer" API permissions to prevent destructive changes
 PAGEVITALS_WEBSITE_DISPLAYNAME=website_id_here #these are automatically added with get-websites.py
